<resources>
    <string name="txtCredits">Support: <a href="https://drive.google.com/open?id=1qUAEul5oQ3zRdPk4jPCTqvNBRY0n6_nZ">click here</a></string>
    <string name="app_name">MEALDER</string>
    <string name="sugar">น้ำตาล</string>
    <string name="colesteral">Cholesterol</string>
    <string name="colesteral2">ไขมันในเส้นเลือด</string>
    <string name="trigri">Triglyceride</string>
    <string name="trigri2">ไขมันในเส้นเลือด</string>
    <string name="sodium">Sodium</string>
    <string name="sodium2">โซเดียม</string>
    <string name="ldl">LDL</string>
    <string name="ldl2">ไขมันในเส้นเลือด</string>
    <string name="hdl">HDL</string>
    <string name="hdl2">ไขมันในเส้นเลือด</string>
    <string name="potassium">Potassium</string>
    <string name="potassium2">โพเเทสเซียม</string>
    <string name="ml">mg/dl</string>
    <string name="ml2">mmol/dl</string>
    <string name="open">เปิด</string>
    <string name="close">ปิดม</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_foryou">FoodForyou</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Header">คำนวณพลังงาน</string>
    <string name="weight">น้ำหนัก</string>
    <string name="weight2">Weight</string>
    <string name="Height">ส่วนสูง</string>
    <string name="Height2">Height</string>
    <string name="Age">อายุ</string>
    <string name="Age2">Age</string>
    <string name="Gender">เพศ</string>
    <string name="man">ชาย</string>
    <string name="women">หญิง</string>
    <string name="bt_cal">ถัดไป</string>
    <string name="Profile">ประวัติของฉัน</string>
    <string name="energy">พลังงานของฉัน</string>
    <string name="BMI">พลังงานที่ร่างกายต้องการ</string>
    <string name="BMI4">ดัชนีมวยกาย</string>
    <string name="BMI2">BMI</string>
    <string name="BMI3">ปริมาณพลังงานที่ร่างกายต้องใช้ในชีวิตประจำวัน </string>
    <string name="BMR">พลังงานต่อวัน</string>
    <string name="BMR2">BMR</string>
    <string name="BMR3"> เครื่องมือวัดปริมาณไขมันในร่างกาย</string>
    <string name="explanation">คำอธิบาย :</string>
    <string name="Profile2">ข้อมูลส่วนตัว</string>
    <string-array name="Hospital">
        <item>โรงพยาบาลศิริราช</item>
        <item>โรงพยาบาลธรรมศาสตร์</item>
        <item>โรงพยาบาลตำรวจ</item>
        <item>โรงพยาบาลเจ้าพระยา</item>

    </string-array>
    <string name="hospital1">โรงพยาบาลศิริราช</string>
    <string name="hospital2">โรงพยาบาลตำรวจ</string>
    <string name="hospital3">โรงพยาบาลเจ้าพระยา</string>
    <string name="hospital4">โรงพยาบาลธรรมศาสตร์</string>
    <string name="Menufood">เมนูอาหาร</string>
    <string name="heart">โรคหัวใจ</string>
    <string name="kidney">โรคไต</string>
    <string name="pressure">โรคความดันสูง</string>
    <string name="sugar_d">โรคเบาหวาน</string>
    <string name="recommend">คำเเนะนำ:</string>
    <string name="title_activity_example">Example</string>
    <string name="title_activity_after_bld_t">AfterBldT</string>
    <string name="title_activity_after_cal_culat">AfterCalCulat</string>
    <string name="doctor1">อยู่ในเกณฑ์ที่ควรปรึกษาคุณหมอ</string>
    <string name="smile">อยู่ในเกณ์ฑปกติ</string>
    <string name="sad">อยู่ในเกณ์ฑที่ไม่ปกติ</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="Option">ส่วนประกอบ</string>
    <string name="Solution">วิธีทำ</string>
    <string name="Value">คุณค่าทางโภชนาการที่ได้รับ(ต่อ 1 ที่)</string>
    <string name="EnergyFood">พลังงาน(กิโลเเคลอรี)</string>
    <string name="CarbohydrateFood">คาร์โบไฮเดรต(กรัม)</string>
    <string name="Fat">ไขมัน(กรัม)</string>
    <string name="Protein">โปรตีน(กรัม)</string>
    <string name="SugarFood">น้ำตาลทราย(กรัม)</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">ชื่อผูู้ใช้งาน (สมชาย)</string>
    <string name="prompt_password">รหัสผ่าน (optional)</string>
    <string name="action_sign_in">ลงทะเบียน</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Age_login">อายุ</string>
    <string name="weight_login">น้ำหนัก</string>
    <string name="height_login">ส่วนสูง</string>
    <string name="min">ต่ำ 0</string>
    <string name="max2">/ 200</string>
    <string name="max3">/ 10</string>
    <string name="max4">/ 300</string>
    <string name="max5">/ 300</string>
    <string name="max6">/ 100</string>
    <string name="max7">/ 700</string>
    <string name="blood_normal">ค่าปกติ  \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  70-110 mg/dl</string>
    <string name="blood_abnormal2">ค่าน้อยกว่าปกติ  \u0020\u0020\u0020\u0020  น้อยกวา่า 69 mg/dl</string>
    <string name="blood_abnormal">ค่าสูง \u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 111 mg/dl</string>
    <string name="sodium_normal">่ค่าปกติ \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020 136 - 145 mmol/dl</string>
    <string name="sodium_abnormal2">ค่าน้อยกว่าปกติ  \u0020\u0020\u0020\u0020  น้อยกวา่า  135 mmol/dl</string>
    <string name="sodium_abnormal">ค่าสูง \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 146 มmmol/dl</string>
    <string name="potassium_normal">ค่าปกติ  \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  3.5–4.5 mmol/dl</string>
    <string name="potassium_abnormal2">ค่าน้อยกว่าปกติ  \u0020\u0020\u0020  น้อยกวา่า  3.4 mmol/dl</string>
    <string name="potassium_abnormal">ค่าสูง\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  มากกว่า 4.6 mmol/dl</string>
    <string name="hdl_normal">ค่าปกติ  \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020 40-60 mg/dl (ชาย)</string>
    <string name="hdl_abnormal3">ค่าน้อยกว่าปกติ\u0020\u0020\u0020\u0020 39 mg/dl</string>
    <string name="hdl_abnormal4">ค่าสูง  \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 60 mg/dl</string>
    <string name="ldl_normal">ค่าปกติ  \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020 \u0020 \u0020\u0020 \u0020 \u0020 \u0020 \u0020    น้อยกว่า 130 mg/dl</string>
    <string name="ldl_abnormal2">ค่าเกินมาตราฐานเล็กน้อย  \u0020\u0020\u0020\u0020  130-159 mg/dl</string>
    <string name="ldl_abnormal3">ค่าสูงเล็กน้อย \u0020\u0020\u0020\u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 159-189  mg/dl</string>
    <string name="ldl_abnormal5">ค่าสูงมาก \u0020\u0020\u0020\u0020\u0020 \u0020 \u0020 \u0020 \u0020  \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020  \u0020 \u0020 มากกว่า 190 mg/dl</string>
    <string name="chl_normal2">ค่าต่ำกว่า \u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020 49 mg/dl</string>
    <string name="chl_normal">ค่าปกติ \u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020  50 - 200 mg/dl</string>
    <string name="chl_abnormal2">ค่าสูง \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 201-239 mg/dl</string>
    <string name="chl_abnormal3">ค่าสูงมาก \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020 มากกว่า 240 mg/dl</string>
    <string name="tri_normal">ค่าปกติ  \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020  50-150 mg/dl</string>
    <string name="tri_abnormal2">ค่่าเกือบสูง \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  150-199 mg/dl</string>
    <string name="tri_abnormal">ค่าสูง \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 200-499 mg/dl</string>
    <string name="tri_abnormal3">ค่าสูงมาก \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 500 mg/dl</string>
    <string name="bloodt_normal">ค่าปกติ  \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  70-100 mg/dl</string>
    <string name="bloodt_abnormal2">ค่าน้อยกว่าปกติ  \u0020\u0020\u0020\u0020  น้อยกวา่า 69 mg/dl</string>
    <string name="bloodt_abnormal">ค่าสูง \u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 101 mg/dl</string>
    <string name="sodiumt_normal">่ค่าปกติ \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020 136 - 145 mmol/dl</string>
    <string name="sodiumt_abnormal2">ค่าน้อยกว่าปกติ  \u0020\u0020\u0020\u0020  น้อยกวา่า  135 mmol/dl</string>
    <string name="sodiumt_abnormal">ค่าสูง \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 146 มmmol/dl</string>
    <string name="potassiumt_normal">ค่าปกติ  \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020  3.5–5.1 mmol/dl</string>
    <string name="potassiumt_abnormal2">ค่าน้อยกว่าปกติ \u0020\u0020\u0020น้อยกวา่า  3.4 mmol/dl</string>
    <string name="potassiumt_abnormal">ค่าสูง\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020มากกว่า 5.2 mmol/dl</string>
    <string name="hdlt_normal">ค่าปกติ  \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u002035-60 mg/dl (ชาย)</string>
    <string name="hdlt_abnormal3">ค่าน้อยกว่าปกติ\u0020\u0020\u0020\u0020 34 mg/dl</string>
    <string name="hdlt_abnormal4">ค่าสูง  \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 มากกว่า 60 mg/dl</string>
    <string name="ldlt_normal">ค่าปกติ  \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020 \u0020 \u0020 \u0020 \u0020\u0020 \u0020 \u0020 \u0020 \u0020    น้อยกว่า 100 mg/dl</string>
    <string name="ldlt_abnormal2">ค่าเกินมาตราฐานเล็กน้อย  \u0020\u0020\u0020\u0020  100-129 mg/dl</string>
    <string name="ldlt_abnormal3">ค่าสูงเล็กน้อย \u0020\u0020\u0020\u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 130-159  mg/dl</string>
    <string name="ldlt_abnormal5">ค่าสูงมาก \u0020\u0020\u0020\u0020\u0020 \u0020 \u0020 \u0020 \u0020  \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020  \u0020 \u0020 มากกว่า 190 mg/dl</string>
    <string name="chlt_normal2">ค่าต่ำกว่า \u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020 49 mg/dl</string>
    <string name="chlt_normal">ค่าปกติ \u0020\u0020\u0020\u0020\u0020 \u0020 \u0020\u0020\u0020\u0020\u0020  50 - 200 mg/dl</string>
    <string name="chlt_abnormal2">ค่าสูง \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 \u0020 201-239 mg/dl</string>
    <string name="chlt_abnormal3">ค่าสูงมาก \u0020\u0020\u0020\u0020 \u0020\u0020\u0020\u0020มากกว่า 240 mg/dl</string>
</resources>