<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cs.peojec401.BloodsProileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/blooddrop"
                android:id="@+id/imageView21" />

            <TextView
                android:text="ประวัติผลตรวจเลือด"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView122"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textSize="14sp"
                android:layout_marginTop="20dp" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical" />
                    </HorizontalScrollView>

                    <TextView
                        android:text="@string/sugar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView136"
                        android:layout_marginTop="10dp"
                        android:textStyle="normal|bold"
                        android:textSize="16sp" />

                    <TextView
                        android:text="Sugar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView135"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:text="@string/sodium2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView134"
                        android:textStyle="normal|bold"
                        android:textSize="16sp" />

                    <TextView
                        android:text="@string/sodium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView138"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView137"
                        android:layout_marginTop="10dp"
                        android:textStyle="normal|bold"
                        android:textSize="16sp"
                        android:text="@string/potassium2" />

                    <TextView
                        android:text="@string/potassium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView133"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:text="@string/colesteral2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView132"
                        android:textStyle="normal|bold"
                        android:textSize="16sp" />

                    <TextView
                        android:text="@string/colesteral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView131"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:text="@string/colesteral2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView130"
                        android:textStyle="normal|bold"
                        android:textSize="16sp" />

                    <TextView
                        android:text="@string/ldl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView129"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:text="@string/colesteral2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView128"
                        android:textStyle="normal|bold"
                        android:textSize="16sp" />

                    <TextView
                        android:text="@string/hdl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView127"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:text="@string/colesteral2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView126"
                        android:textStyle="normal|bold"
                        android:textSize="16sp" />

                    <TextView
                        android:text="@string/trigri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView125"
                        android:layout_marginBottom="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView123" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="15dp"
                        android:paddingRight="30dp">

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_sugar"
                            android:layout_marginTop="15dp"
                            android:textStyle="normal|bold"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_sodium"
                            android:layout_marginTop="30dp"
                            android:textStyle="normal|bold"
                            android:textSize="18sp"
                            android:textAlignment="center" />

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_potassium"
                            android:layout_marginTop="25dp"
                            android:textStyle="normal|bold"
                            android:textSize="18sp"
                            android:textAlignment="center" />

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/Profile_choles"
                            android:layout_marginTop="25dp"
                            android:textStyle="normal|bold"
                            android:textSize="18sp" />

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/Profile_ldl"
                            android:layout_marginTop="25dp"
                            android:textStyle="normal|bold"
                            android:textSize="18sp" />

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_hdl"
                            android:layout_marginTop="25dp"
                            android:textStyle="normal|bold"
                            android:textSize="18sp" />

                        <TextView
                            android:text="0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/profile_tri"
                            android:layout_marginTop="25dp"
                            android:textStyle="normal|bold"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp">

                        <TextView
                            android:text="( 70 -120 )"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView151"
                            android:layout_marginTop="15dp"
                            android:textColor="@color/colorOrg" />

                        <TextView
                            android:text="( 135 - 145 )"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView150"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/colorOrg" />

                        <TextView
                            android:text="( 3.5 - 5.0 ) "
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView149"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/colorOrg" />

                        <TextView
                            android:text="น้อยกว่า 200"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView148"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/colorOrg" />

                        <TextView
                            android:text="น้อยกว่า 100"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView147"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/colorOrg" />

                        <TextView
                            android:text="( 40 - 50 )"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView146"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/colorOrg" />

                        <TextView
                            android:text="( 40 - 149 )"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView145"
                            android:layout_marginTop="30dp"
                            android:textColor="@color/colorOrg" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
